K8S_confgi_files/springbackend_maniifest/springbackend_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: springboot-backend
  namespace: drawini
spec:
  replicas: 1
  selector:
    matchLabels:
      app: springboot-backend
  template:
    metadata:
      labels:
        app: springboot-backend
    spec:
      containers:
      - name: springboot-backend
        image: khaledmraadtn/backpain
        ports:
        - containerPort: 8081
