K8S_confgi_files/springbackend_maniifest/springbackend_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: springbackend-service
  namespace: drawini
spec:
  type: ClusterIP
  selector:
    app: springboot-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8081
